Code Cleaning and Refactoring

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,4 +1,21 @@
 {
+    "@@locale": "en",
+    "language": "Language",
+    "selectLang": "select your language",
+    "about": "About",
+    "portfolio": "Portfolio",
+    "contact": "Contact",
+    "greeting": "Hello there, I'm",
+    "devAndDesigner": "Flutter Developer & Designer",
     "fullName": "Roman Cinis",
-    "greeting": "Hello there, I'm"
+    "iAm": "I'm awarded T-shaped specialist in the fields of Flutter Development and Design, with great love for interactive animations and good UX. Let's make something awesome together!",
+    "findInPortfolio": "Here you can find",
+    "somePortfilio": "some of my ",
+    "projectsPortfolio": "projects and repositories.",
+    "flutterClock": "Steampunk Flutter Clock",
+    "flutterClockDesc": "This project is one of the winning submissions in Official Google's & Lenovo dev/design contest, called “Flutter Clock” (with almost a thousand entries worldwide).",
+    "helloDribbble": "Hello Dribbble",
+    "helloDribbbleDesc": "A interactive animations showcase project, I've as my Debut Shot for famous Dribbble.com, аfter I won the invitation, in March 2020, now as a “Dribbble Player”.",
+    "a": "a",
+    "b": "b"
 }
