Added Slovak Template and Buttons Bar in Portfolio Projects

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -15,7 +15,7 @@
     "flutterClock": "Steampunk Flutter Clock",
     "flutterClockDesc": "This project is one of the winning submissions in Official Google's & Lenovo dev/design contest, called “Flutter Clock” (with almost a thousand entries worldwide).",
     "helloDribbble": "Hello Dribbble",
-    "helloDribbbleDesc": "A interactive animations showcase project, I've as my Debut Shot for famous Dribbble.com, аfter I won the invitation, in March 2020, now as a “Dribbble Player”.",
+    "helloDribbbleDesc": "A interactive animations showcase project, I've made as my Debut Shot for famous Dribbble.com, аfter I won the invitation, so now as a Dribbble “Player”.",
     "a": "a",
     "b": "b"
 }
