Starting with Contacts Section

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -16,6 +16,7 @@
     "flutterClockDesc": "This project is one of the winning submissions in Official Google's & Lenovo dev/design contest, called “Flutter Clock” (with almost a thousand entries worldwide).",
     "helloDribbble": "Hello Dribbble",
     "helloDribbbleDesc": "A interactive animations showcase project, I've made as my Debut Shot for famous Dribbble.com, аfter I won the invitation (so now as a “Player”).",
-    "a": "a",
-    "b": "b"
+    "contactDesc": "Physically in the city of Brno, on the internets, I'm known as a “tsinis”:",
+    "socilalNetworks": "",
+    "email": "or just simply write me on the good old email here:"
 }
