Added Basic Side Menu Drawer

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,7 +4,7 @@
     "selectLang": "select your language",
     "about": "About",
     "portfolio": "Portfolio",
-    "contact": "Contacts",
+    "contacts": "Contacts",
     "greeting": "Hello there, I'm",
     "devAndDesigner": "Flutter Developer & Designer",
     "fullName": "Roman Cinis",
