--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,24 +1,103 @@
 {
-    "@@locale": "en",
-    "language": "Language",
-    "selectLang": "select your language",
-    "about": "About",
-    "portfolio": "Portfolio",
-    "contacts": "Contacts",
-    "greeting": "Hello there, I'm",
-    "devAndDesigner": "Flutter Developer & Designer",
-    "fullName": "Roman Cinis",
-    "iAm": "I'm awarded T-shaped specialist in the fields of Flutter Development and Design, with great love for interactive animations and good UX. Let's make something awesome together!",
-    "findInPortfolio": "Here you can find",
-    "somePortfilio": "some of my ",
-    "projectsPortfolio": "projects and repositories.",
-    "flutterClock": "This project is one of the winning submissions in Official Google's & Lenovo dev/design contest, called “Flutter Clock” (with almost a thousand entries worldwide).",
-    "helloDribbble": "Interactive animations showcase project, I've made, as my Debut Shot for legendary Dribbble.com, аfter I won the invitation (so now as a “Player”).",
-    "tongueTwisters": "Tongue Twisters",
-    "tongueTwistersDesc": "Application for testing tongue twisters with focus on the design. Created it in coop with illustrator – license do not allow me to open source (i.e. illustrations).",
-    "thisWeb": "This Website",
-    "thisWebDesc": "Obviously, this entire website is made in Flutter and written on pure Dart. The one and only third-party dependency is the animation in the About section, which was made in Rive.",
-    "contactsDesc": "Physically in the city of Brno, on the internets, I'm known as a “tsinis”:",
-    "email": "or just simply write me the good old e-mail here:",
-    "socilalNetworks": ""
+  "@@locale" : "en",
+  "about" : "About",
+  "@about" : {
+    "type" : "text"
+  },
+  "check" : "Check ",
+  "@check" : {
+    "type" : "text"
+  },
+  "contacts" : "Contacts",
+  "@contacts" : {
+    "type" : "text"
+  },
+  "contactsDesc" : "Physically in the city of Brno, on the internets, I'm known as a “tsinis”:",
+  "@contactsDesc" : {
+    "type" : "text"
+  },
+  "devAndDesigner" : "Flutter Developer & Designer",
+  "@devAndDesigner" : {
+    "type" : "text"
+  },
+  "email" : "or just simply write me the good old e-mail here:",
+  "@email" : {
+    "type" : "text"
+  },
+  "findInPortfolio" : "Here you can find",
+  "@findInPortfolio" : {
+    "type" : "text"
+  },
+  "flutterClock" : "This project is one of the winning submissions in Official Google's & Lenovo dev/design contest, called “Flutter Clock” (with almost a thousand entries worldwide).",
+  "@flutterClock" : {
+    "type" : "text"
+  },
+  "fullName" : "Roman Cinis",
+  "@fullName" : {
+    "type" : "text"
+  },
+  "greeting" : "Hello there, I'm",
+  "@greeting" : {
+    "type" : "text"
+  },
+  "helloDribbble" : "Interactive animations showcase project, I've made, as my Debut Shot for legendary Dribbble.com, аfter I won the invitation (so now as a “Player”).",
+  "@helloDribbble" : {
+    "type" : "text"
+  },
+  "iAm" : "I'm awarded T-shaped specialist in the fields of Flutter Development and Design, with great love for interactive animations and good UX. Let's make something awesome together!",
+  "@iAm" : {
+    "type" : "text"
+  },
+  "inAction" : "in Action",
+  "@inAction" : {
+    "type" : "text"
+  },
+  "language" : "Language",
+  "@language" : {
+    "type" : "text"
+  },
+  "portfolio" : "Portfolio",
+  "@portfolio" : {
+    "type" : "text"
+  },
+  "projectsPortfolio" : "projects and repositories.",
+  "@projectsPortfolio" : {
+    "type" : "text"
+  },
+  "see" : "See ",
+  "@see" : {
+    "type" : "text"
+  },
+  "selectLang" : "select your language",
+  "@selectLang" : {
+    "type" : "text"
+  },
+  "somePortfilio" : "some of my ",
+  "@somePortfilio" : {
+    "type" : "text"
+  },
+  "theCode" : "the Code",
+  "@theCode" : {
+    "type" : "text"
+  },
+  "theDesign" : "the Design",
+  "@theDesign" : {
+    "type" : "text"
+  },
+  "thisWeb" : "This Website",
+  "@thisWeb" : {
+    "type" : "text"
+  },
+  "thisWebDesc" : "Obviously, this entire website is made in Flutter and written on pure Dart. The one and only third-party dependency is the animation in the About section, which was made in Rive.",
+  "@thisWebDesc" : {
+    "type" : "text"
+  },
+  "tongueTwisters" : "Tongue Twisters",
+  "@tongueTwisters" : {
+    "type" : "text"
+  },
+  "tongueTwistersDesc" : "Application for testing tongue twisters with focus on the design. Created it in coop with illustrator – license do not allow me to open source (i.e. illustrations).",
+  "@tongueTwistersDesc" : {
+    "type" : "text"
+  }
 }
