--- a/lib/l10n/intl_sk.arb
+++ b/lib/l10n/intl_sk.arb
@@ -1,103 +1,107 @@
 {
-  "@@locale" : "sk",
-  "about" : "O mne",
-  "@about" : {
-    "type" : "text"
+  "@@locale": "sk",
+  "about": "O mne",
+  "@about": {
+    "type": "text"
   },
-  "check" : "Skúmať",
-  "@check" : {
-    "type" : "text"
+  "check": "Skúmať",
+  "@check": {
+    "type": "text"
   },
-  "contacts" : "Kontakty",
-  "@contacts" : {
-    "type" : "text"
+  "contacts": "Kontakty",
+  "@contacts": {
+    "type": "text"
   },
-  "contactsDesc" : "Fyzicky som v Brne, na internete, známy skôr ako „tsinis“:",
-  "@contactsDesc" : {
-    "type" : "text"
+  "contactsDesc": "Fyzicky som v Brne, na internete, známy skôr ako „tsinis“:",
+  "@contactsDesc": {
+    "type": "text"
   },
-  "devAndDesigner" : "Flutter vývojár a grafik",
-  "@devAndDesigner" : {
-    "type" : "text"
+  "devAndDesigner": "Flutter vývojár a grafik",
+  "@devAndDesigner": {
+    "type": "text"
   },
-  "email" : "alebo mi jednoducho napíšte starý dobrý e-mail:",
-  "@email" : {
-    "type" : "text"
+  "email": "alebo mi jednoducho napíšte starý dobrý e-mail:",
+  "@email": {
+    "type": "text"
   },
-  "findInPortfolio" : "Tu nájdete",
-  "@findInPortfolio" : {
-    "type" : "text"
+  "findInPortfolio": "Tu nájdete",
+  "@findInPortfolio": {
+    "type": "text"
   },
-  "flutterClock" : "Tento projekt je jedným z víťazov v spoločnej vývojárske/dizajn súťaži firiem Google a Lenovo, pod názvom \"Flutter Clock\" (sa skoro tisíckou príspevkov z celého sveta).",
-  "@flutterClock" : {
-    "type" : "text"
+  "flutterClock": "Tento projekt je jedným z víťazov v spoločnej vývojárske/dizajn súťaži firiem Google a Lenovo, pod názvom \"Flutter Clock\" (sa skoro tisíckou príspevkov z celého sveta).",
+  "@flutterClock": {
+    "type": "text"
   },
-  "fullName" : "Roman Cinis",
-  "@fullName" : {
-    "type" : "text"
+  "fullName": "Roman Cinis",
+  "@fullName": {
+    "type": "text"
   },
-  "greeting" : "Vitajte, som",
-  "@greeting" : {
-    "type" : "text"
+  "greeting": "Vitajte, som",
+  "@greeting": {
+    "type": "text"
   },
-  "helloDribbble" : "Toto je projekt ukazujúce Interaktívne animácie, ktoré som vytvoril ako svoj Debut na legendárnom Dribbble, potom čo som, nedávno, dostal vytúžené pozvaní.",
-  "@helloDribbble" : {
-    "type" : "text"
+  "helloDribbble": "Toto je projekt ukazujúce Interaktívne animácie, ktoré som vytvoril ako svoj Debut na legendárnom Dribbble, potom čo som, nedávno, dostal vytúžené pozvaní.",
+  "@helloDribbble": {
+    "type": "text"
   },
-  "iAm" : "Som oceneným „T-shaped“ špecialistom ako Flutter vývojár a grafik, s veľkou láskou k interaktívnym animáciám a dobrému UX. Urobme niečo úžasné spoločne!",
-  "@iAm" : {
-    "type" : "text"
+  "iAm": "Som oceneným „T-shaped“ špecialistom ako Flutter vývojár a grafik, s veľkou láskou k interaktívnym animáciám a dobrému UX. Urobme niečo úžasné spoločne!\n\n Stiahnite si moje CV tu:",
+  "@iAm": {
+    "type": "text"
   },
-  "inAction" : "v akcii",
-  "@inAction" : {
-    "type" : "text"
+  "cloud": "Všetky jazykové verzie",
+  "@cloud": {
+    "type": "text"
   },
-  "language" : "Jazyk",
-  "@language" : {
-    "type" : "text"
+  "inAction": "v akcii",
+  "@inAction": {
+    "type": "text"
   },
-  "portfolio" : "Portfólio",
-  "@portfolio" : {
-    "type" : "text"
+  "language": "Jazyk",
+  "@language": {
+    "type": "text"
   },
-  "projectsPortfolio" : "projektov a repozitárov.",
-  "@projectsPortfolio" : {
-    "type" : "text"
+  "portfolio": "Portfólio",
+  "@portfolio": {
+    "type": "text"
   },
-  "see" : "Pozrieť",
-  "@see" : {
-    "type" : "text"
+  "projectsPortfolio": "projektov a repozitárov.",
+  "@projectsPortfolio": {
+    "type": "text"
   },
-  "selectLang" : "select your language",
-  "@selectLang" : {
-    "type" : "text"
+  "see": "Pozrieť",
+  "@see": {
+    "type": "text"
   },
-  "somePortfilio" : "niektoré z mojich",
-  "@somePortfilio" : {
-    "type" : "text"
+  "selectLang": "select your language",
+  "@selectLang": {
+    "type": "text"
   },
-  "theCode" : "kód",
-  "@theCode" : {
-    "type" : "text"
+  "somePortfilio": "niektoré z mojich",
+  "@somePortfilio": {
+    "type": "text"
   },
-  "theDesign" : "dizajn",
-  "@theDesign" : {
-    "type" : "text"
+  "theCode": "kód",
+  "@theCode": {
+    "type": "text"
   },
-  "thisWeb" : "Táto webová stránka",
-  "@thisWeb" : {
-    "type" : "text"
+  "theDesign": "dizajn",
+  "@theDesign": {
+    "type": "text"
   },
-  "thisWebDesc" : "Samozrejmé, že celý tento web je vytvorený vo Flutter a je napísaný na čistom Dart. Závislosť jednej a jediné, tretie strany je animácia v sekcii \"O mne\", ktorá bola vytvorená v Rive.",
-  "@thisWebDesc" : {
-    "type" : "text"
+  "thisWeb": "Táto webová stránka",
+  "@thisWeb": {
+    "type": "text"
   },
-  "tongueTwisters" : "Jazykolamy",
-  "@tongueTwisters" : {
-    "type" : "text"
+  "thisWebDesc": "Samozrejmé, že celý tento web je vytvorený vo Flutter a je napísaný na čistom Dart. Závislosť jednej a jediné, tretie strany je animácia v sekcii \"O mne\", ktorá bola vytvorená v Rive.",
+  "@thisWebDesc": {
+    "type": "text"
   },
-  "tongueTwistersDesc" : "Aplikácia pre testovanie jazykolamov, so zameraním na dizajn. Vytvorené v spolupráci s ilustrátorom - preto licencie mi neumožňuje otvoriť zdroj (tj. aj ilustrácie).",
-  "@tongueTwistersDesc" : {
-    "type" : "text"
+  "tongueTwisters": "Jazykolamy",
+  "@tongueTwisters": {
+    "type": "text"
+  },
+  "tongueTwistersDesc": "Aplikácia pre testovanie jazykolamov, so zameraním na dizajn. Vytvorené v spolupráci s ilustrátorom - preto licencie mi neumožňuje otvoriť zdroj (tj. aj ilustrácie).",
+  "@tongueTwistersDesc": {
+    "type": "text"
   }
 }
