--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -44,15 +44,19 @@
   "@helloDribbble": {
     "type": "text"
   },
-  "iAm": "Я награждённый T-специалист в области Flutter разработки и дизайна, с большой любовью к интерактивным анимациям и хорошему UX.  Давайте сделаем что-то классное вместе!\n\n Скачайте моё резюме тут:",
+  "iAm": "Я награждённый T-специалист в области Flutter разработки и дизайна, с большой любовью к интерактивным анимациям и хорошему UX. Давайте сделаем что-то классное вместе!\n\nХотите узнать больше?",
   "@iAm": {
     "type": "text"
   },
-  "cloud": "Все языковые варианты",
+  "cv": "Скачать CV",
+  "@cv": {
+    "type": "text"
+  },
+  "cloud": "Все языки",
   "@cloud": {
     "type": "text"
   },
-  "inAction": "в действии",
+  "inAction": "видео",
   "@inAction": {
     "type": "text"
   },
