--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,111 +1,61 @@
 {
   "@@locale": "en",
   "about": "About",
-  "@about": {
-    "type": "text"
-  },
+  "@about": {},
   "check": "Check the",
-  "@check": {
-    "type": "text"
-  },
-  "contacts": "Contacts",
-  "@contacts": {
-    "type": "text"
-  },
-  "contactsDesc": "Physically in the city of Brno, on the internets, I'm known as a “tsinis”:",
-  "@contactsDesc": {
-    "type": "text"
-  },
-  "devAndDesigner": "Flutter Developer & Designer",
-  "@devAndDesigner": {
-    "type": "text"
-  },
-  "email": "or just simply write me the good old e-mail here:",
-  "@email": {
-    "type": "text"
-  },
-  "findInPortfolio": "Here you can find",
-  "@findInPortfolio": {
-    "type": "text"
-  },
-  "flutterClock": "This project is one of the winning submissions in Official Google's & Lenovo dev/design contest, called “Flutter Clock” (with almost a thousand entries worldwide).",
-  "@flutterClock": {
-    "type": "text"
-  },
-  "fullName": "Roman Cinis",
-  "@fullName": {
-    "type": "text"
-  },
-  "greeting": "Hello there, I'm",
-  "@greeting": {
-    "type": "text"
-  },
-  "helloDribbble": "Interactive animations showcase project, I've made, as my Debut Shot for legendary Dribbble.com, аfter I won the invitation (so now as a “Player”).",
-  "@helloDribbble": {
-    "type": "text"
-  },
-  "iAm": "I'm awarded T-shaped specialist in the fields of Flutter Development and Design, with great love for interactive animations and good UX. Let's make something awesome together!\n\nWant to know more?",
-  "@iAm": {
-    "type": "text"
-  },
-  "cv": "Grab my CV",
-  "@cv": {
-    "type": "text"
-  },
+  "@check": {},
   "cloud": "All languages",
-  "@cloud": {
-    "type": "text"
-  },
+  "@cloud": {},
+  "contacts": "Contacts",
+  "@contacts": {},
+  "contactsDesc": "Physically in the city of Brno, on the internets, I'm known as a “tsinis”:",
+  "@contactsDesc": {},
+  "cv": "Grab my CV",
+  "@cv": {},
+  "devAndDesigner": "Flutter Developer & Designer",
+  "@devAndDesigner": {},
+  "email": "or just simply write me the good old e-mail here:",
+  "@email": {},
+  "findInPortfolio": "Here you can find",
+  "@findInPortfolio": {},
+  "flutterClock": "This project is one of the winning submissions in Official Google's & Lenovo dev/design contest, called “Flutter Clock” (with almost a thousand entries worldwide).",
+  "@flutterClock": {},
+  "fullName": "Roman Cinis",
+  "@fullName": {},
+  "greeting": "Hello there, I'm",
+  "@greeting": {},
+  "helloDribbble": "Interactive animations showcase project, I've made, as my Debut Shot for legendary Dribbble.com, аfter I won the invitation (so now as a “Player”).",
+  "@helloDribbble": {},
+  "iAm": "I'm awarded T-shaped specialist in the fields of Flutter Development and Design, with great love for interactive animations and good UX. Let's make something awesome together!\n\nWant to know more?",
+  "@iAm": {},
   "inAction": "Video",
-  "@inAction": {
-    "type": "text"
-  },
+  "@inAction": {},
   "language": "Language",
-  "@language": {
-    "type": "text"
-  },
+  "@language": {},
+  "planetBGame": "Plan-et-B Game",
+  "@planetBGame": {},
+  "planetBGameDesc": "This project is one of the winners of this year's official Flutter Community Hackaton. More than two and a half thousand developers from all over the world took part in it.",
+  "@planetBGameDesc": {},
   "portfolio": "Portfolio",
-  "@portfolio": {
-    "type": "text"
-  },
+  "@portfolio": {},
   "projectsPortfolio": "projects and repositories.",
-  "@projectsPortfolio": {
-    "type": "text"
-  },
+  "@projectsPortfolio": {},
   "see": "See the",
-  "@see": {
-    "type": "text"
-  },
+  "@see": {},
   "selectLang": "select your language",
-  "@selectLang": {
-    "type": "text"
-  },
+  "@selectLang": {},
   "somePortfilio": "some of my ",
-  "@somePortfilio": {
-    "type": "text"
-  },
+  "@somePortfilio": {},
   "theCode": "Code",
-  "@theCode": {
-    "type": "text"
-  },
+  "@theCode": {},
   "theDesign": "Design",
-  "@theDesign": {
-    "type": "text"
-  },
+  "@theDesign": {},
   "thisWeb": "This Website",
-  "@thisWeb": {
-    "type": "text"
-  },
+  "@thisWeb": {},
   "thisWebDesc": "Obviously, this entire website is made in Flutter and written on pure Dart. The one and only third-party dependency is the animation in the About section, which was made in Rive.",
-  "@thisWebDesc": {
-    "type": "text"
-  },
+  "@thisWebDesc": {},
   "tongueTwisters": "Tongue Twisters",
-  "@tongueTwisters": {
-    "type": "text"
-  },
+  "@tongueTwisters": {},
   "tongueTwistersDesc": "Application for testing tongue twisters with focus on the design. Created it in coop with illustrator – license do not allow me to open source (i.e. illustrations).",
-  "@tongueTwistersDesc": {
-    "type": "text"
-  }
+  "@tongueTwistersDesc": {}
 }
