--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -1,111 +1,61 @@
 {
   "@@locale": "ru",
   "about": "Обо мне",
-  "@about": {
-    "type": "text"
-  },
+  "@about": {},
   "check": "Проверьте",
-  "@check": {
-    "type": "text"
-  },
-  "contacts": "Контакты",
-  "@contacts": {
-    "type": "text"
-  },
-  "contactsDesc": "Физически нахожусь в Брно, в этих интернетах я известен как «tsinis»:",
-  "@contactsDesc": {
-    "type": "text"
-  },
-  "devAndDesigner": "Flutter разработчик и дизайнер",
-  "@devAndDesigner": {
-    "type": "text"
-  },
-  "email": "или же просто напишите мне на электронную почту:",
-  "@email": {
-    "type": "text"
-  },
-  "findInPortfolio": "Здесь вы найдёте",
-  "@findInPortfolio": {
-    "type": "text"
-  },
-  "flutterClock": "Этот проект является одним из победителей совместного конкурса, компаний Google и Lenovo, под названием «Flutter Clock» (с почти тысячей проектов со всего мира).",
-  "@flutterClock": {
-    "type": "text"
-  },
-  "fullName": "Роман Цинис",
-  "@fullName": {
-    "type": "text"
-  },
-  "greeting": "Приветствую, я",
-  "@greeting": {
-    "type": "text"
-  },
-  "helloDribbble": "Этот проект — демонстрация интерактивных анимаций, сделанных в качестве Дебюта на легендарном Dribbble, на который я получил долгожданное приглашение.",
-  "@helloDribbble": {
-    "type": "text"
-  },
-  "iAm": "Я награждённый T-специалист в области Flutter разработки и дизайна, с большой любовью к интерактивным анимациям и хорошему UX. Давайте сделаем что-то классное вместе!\n\nХотите узнать больше?",
-  "@iAm": {
-    "type": "text"
-  },
-  "cv": "Скачать CV",
-  "@cv": {
-    "type": "text"
-  },
+  "@check": {},
   "cloud": "Все языки",
-  "@cloud": {
-    "type": "text"
-  },
+  "@cloud": {},
+  "contacts": "Контакты",
+  "@contacts": {},
+  "contactsDesc": "Физически нахожусь в Брно, в этих интернетах я известен как «tsinis»:",
+  "@contactsDesc": {},
+  "cv": "Скачать CV",
+  "@cv": {},
+  "devAndDesigner": "Flutter разработчик и дизайнер",
+  "@devAndDesigner": {},
+  "email": "или же просто напишите мне на электронную почту:",
+  "@email": {},
+  "findInPortfolio": "Здесь вы найдёте",
+  "@findInPortfolio": {},
+  "flutterClock": "Этот проект является одним из победителей совместного конкурса, компаний Google и Lenovo, под названием «Flutter Clock» (с почти тысячей проектов со всего мира).",
+  "@flutterClock": {},
+  "fullName": "Роман Цинис",
+  "@fullName": {},
+  "greeting": "Приветствую, я",
+  "@greeting": {},
+  "helloDribbble": "Этот проект — демонстрация интерактивных анимаций, сделанных в качестве Дебюта на легендарном Dribbble, на который я получил долгожданное приглашение.",
+  "@helloDribbble": {},
+  "iAm": "Я награждённый T-специалист в области Flutter разработки и дизайна, с большой любовью к интерактивным анимациям и хорошему UX. Давайте сделаем что-то классное вместе!\n\nХотите узнать больше?",
+  "@iAm": {},
   "inAction": "видео",
-  "@inAction": {
-    "type": "text"
-  },
+  "@inAction": {},
   "language": "Язык",
-  "@language": {
-    "type": "text"
-  },
+  "@language": {},
+  "planetBGame": "Игра План-ет-а Б",
+  "@planetBGame": {},
+  "planetBGameDesc": "Этот проект - стал одним из победителей официального двухдневного хакатона Flutter Сообщества в этом году. В хакатоне приняли участие более двух с половиной тысяч человек со всего мира.",
+  "@planetBGameDesc": {},
   "portfolio": "Портфолио",
-  "@portfolio": {
-    "type": "text"
-  },
+  "@portfolio": {},
   "projectsPortfolio": "проектов и репозиториев",
-  "@projectsPortfolio": {
-    "type": "text"
-  },
+  "@projectsPortfolio": {},
   "see": "Смотреть",
-  "@see": {
-    "type": "text"
-  },
+  "@see": {},
   "selectLang": "select your language",
-  "@selectLang": {
-    "type": "text"
-  },
+  "@selectLang": {},
   "somePortfilio": "некоторые из моих",
-  "@somePortfilio": {
-    "type": "text"
-  },
+  "@somePortfilio": {},
   "theCode": "код",
-  "@theCode": {
-    "type": "text"
-  },
+  "@theCode": {},
   "theDesign": "дизайн",
-  "@theDesign": {
-    "type": "text"
-  },
+  "@theDesign": {},
   "thisWeb": "Этот веб-сайт",
-  "@thisWeb": {
-    "type": "text"
-  },
+  "@thisWeb": {},
   "thisWebDesc": "Разумеется, весь этот сайт написан в Flutter на чистейшем Dart. Единственная сторонняя зависимость тут — это анимация в секции «Обо мне», которая сделана в Rive.",
-  "@thisWebDesc": {
-    "type": "text"
-  },
+  "@thisWebDesc": {},
   "tongueTwisters": "Скороговорки",
-  "@tongueTwisters": {
-    "type": "text"
-  },
+  "@tongueTwisters": {},
   "tongueTwistersDesc": "Аппликация создана для тестирования скороговорок с главным упором на дизайн. Создана совместно с иллюстратором, потому правила лицензии не позволяет мне выложить проект (т.е. и иллюстрации) в открытый доступ.",
-  "@tongueTwistersDesc": {
-    "type": "text"
-  }
+  "@tongueTwistersDesc": {}
 }
