--- a/lib/l10n/intl_sk.arb
+++ b/lib/l10n/intl_sk.arb
@@ -1,111 +1,61 @@
 {
   "@@locale": "sk",
   "about": "O mne",
-  "@about": {
-    "type": "text"
-  },
+  "@about": {},
   "check": "Skúmať",
-  "@check": {
-    "type": "text"
-  },
-  "contacts": "Kontakty",
-  "@contacts": {
-    "type": "text"
-  },
-  "contactsDesc": "Fyzicky som v Brne, na internete, známy skôr ako „tsinis“:",
-  "@contactsDesc": {
-    "type": "text"
-  },
-  "devAndDesigner": "Flutter vývojár a grafik",
-  "@devAndDesigner": {
-    "type": "text"
-  },
-  "email": "alebo mi jednoducho napíšte starý dobrý e-mail:",
-  "@email": {
-    "type": "text"
-  },
-  "findInPortfolio": "Tu nájdete",
-  "@findInPortfolio": {
-    "type": "text"
-  },
-  "flutterClock": "Tento projekt je jedným z víťazov v spoločnej vývojárske/dizajn súťaži firiem Google a Lenovo, pod názvom \"Flutter Clock\" (sa skoro tisíckou príspevkov z celého sveta).",
-  "@flutterClock": {
-    "type": "text"
-  },
-  "fullName": "Roman Cinis",
-  "@fullName": {
-    "type": "text"
-  },
-  "greeting": "Vitajte, som",
-  "@greeting": {
-    "type": "text"
-  },
-  "helloDribbble": "Toto je projekt ukazujúce Interaktívne animácie, ktoré som vytvoril ako svoj Debut na legendárnom Dribbble, potom čo som, nedávno, dostal vytúžené pozvaní.",
-  "@helloDribbble": {
-    "type": "text"
-  },
-  "iAm": "Som oceneným „T-shaped“ špecialistom ako Flutter vývojár a grafik, s veľkou láskou k interaktívnym animáciám a dobrému UX. Urobme niečo úžasné spoločne!\n\nChcete vedieť viac?",
-  "@iAm": {
-    "type": "text"
-  },
-  "cv": "Stiahnuť si CV",
-  "@cv": {
-    "type": "text"
-  },
+  "@check": {},
   "cloud": "Všetky jazyky",
-  "@cloud": {
-    "type": "text"
-  },
+  "@cloud": {},
+  "contacts": "Kontakty",
+  "@contacts": {},
+  "contactsDesc": "Fyzicky som v Brne, na internete, známy skôr ako „tsinis“:",
+  "@contactsDesc": {},
+  "cv": "Stiahnuť si CV",
+  "@cv": {},
+  "devAndDesigner": "Flutter vývojár a grafik",
+  "@devAndDesigner": {},
+  "email": "alebo mi jednoducho napíšte starý dobrý e-mail:",
+  "@email": {},
+  "findInPortfolio": "Tu nájdete",
+  "@findInPortfolio": {},
+  "flutterClock": "Tento projekt je jedným z víťazov v spoločnej vývojárske/dizajn súťaži firiem Google a Lenovo, pod názvom \"Flutter Clock\" (sa skoro tisíckou príspevkov z celého sveta).",
+  "@flutterClock": {},
+  "fullName": "Roman Cinis",
+  "@fullName": {},
+  "greeting": "Vitajte, som",
+  "@greeting": {},
+  "helloDribbble": "Toto je projekt ukazujúce Interaktívne animácie, ktoré som vytvoril ako svoj Debut na legendárnom Dribbble, potom čo som, nedávno, dostal vytúžené pozvaní.",
+  "@helloDribbble": {},
+  "iAm": "Som oceneným „T-shaped“ špecialistom ako Flutter vývojár a grafik, s veľkou láskou k interaktívnym animáciám a dobrému UX. Urobme niečo úžasné spoločne!\n\nChcete vedieť viac?",
+  "@iAm": {},
   "inAction": "v akcii",
-  "@inAction": {
-    "type": "text"
-  },
+  "@inAction": {},
   "language": "Jazyk",
-  "@language": {
-    "type": "text"
-  },
+  "@language": {},
+  "planetBGame": "Hra Plan-et-а B",
+  "@planetBGame": {},
+  "planetBGameDesc": "Táto PWA hra je jedným z víťazov v tohtoročnom oficiálnom, dvojdňovom hackathonu Spoločenstva Flutter, ktorého sa zúčastnilo cez dva a pol tisícky ľudí z celého sveta.",
+  "@planetBGameDesc": {},
   "portfolio": "Portfólio",
-  "@portfolio": {
-    "type": "text"
-  },
+  "@portfolio": {},
   "projectsPortfolio": "projektov a repozitárov.",
-  "@projectsPortfolio": {
-    "type": "text"
-  },
+  "@projectsPortfolio": {},
   "see": "Pozrieť",
-  "@see": {
-    "type": "text"
-  },
+  "@see": {},
   "selectLang": "select your language",
-  "@selectLang": {
-    "type": "text"
-  },
+  "@selectLang": {},
   "somePortfilio": "niektoré z mojich",
-  "@somePortfilio": {
-    "type": "text"
-  },
+  "@somePortfilio": {},
   "theCode": "kód",
-  "@theCode": {
-    "type": "text"
-  },
+  "@theCode": {},
   "theDesign": "dizajn",
-  "@theDesign": {
-    "type": "text"
-  },
+  "@theDesign": {},
   "thisWeb": "Táto webová stránka",
-  "@thisWeb": {
-    "type": "text"
-  },
+  "@thisWeb": {},
   "thisWebDesc": "Samozrejmé, že celý tento web je vytvorený vo Flutter a je napísaný na čistom Dart. Závislosť jednej a jediné, tretie strany je animácia v sekcii \"O mne\", ktorá bola vytvorená v Rive.",
-  "@thisWebDesc": {
-    "type": "text"
-  },
+  "@thisWebDesc": {},
   "tongueTwisters": "Jazykolamy",
-  "@tongueTwisters": {
-    "type": "text"
-  },
+  "@tongueTwisters": {},
   "tongueTwistersDesc": "Aplikácia pre testovanie jazykolamov, so zameraním na dizajn. Vytvorené v spolupráci s ilustrátorom - preto licencie mi neumožňuje otvoriť zdroj (tj. aj ilustrácie).",
-  "@tongueTwistersDesc": {
-    "type": "text"
-  }
+  "@tongueTwistersDesc": {}
 }
